Fixed deleted assignments view white text coloring in dark mode and missing priority strip in light mode

--- a/timeweb/timewebapp/static/timewebapp/css/app.css
+++ b/timeweb/timewebapp/static/timewebapp/css/app.css
@@ -61,6 +61,9 @@ main.background-image-exists {
 #assignments-container.viewing-deleted-assignments .graph-footer {
     height: var(--assignment-margin-bottom);
 }
+#assignments-container.viewing-deleted-assignments .assignment {
+    --priority-color: var(--color);
+}
 #assignments-container.viewing-deleted-assignments .left-side-of-header {
     --left-side-of-header-width: initial;
 }
